# flappy-bird

./: CMakeLists.txt  FlappyBird  README.md  gameover.cpp  gameover.h  gamescreen.cpp  gamescreen.h  main.cpp  pipes.cpp  save_score.cpp  save_score.h  stdusages.cpp
include/: DEFINITIONS.h
include/InputManager/: InputManager.h
include/SplashState/: SplashState.h
include/asset/: AssetManager.h
include/game/: Bird.h  Collision.h  Flash.h  Game.h  HUD.h  Land.h  Pipe.h  pipes.h
include/screens/: GameOverState.h  GameState.h  MainMenuState.h  gameover.h  gamescreen.h
include/state/: State.h  StateMachine.h
include/utils/: save_score.h  stdusages.h
src/: main.cpp
src/AssetManager/: AssetManager.cpp
src/InputManager/: InputManager.cpp
src/SplashState/: SplashState.cpp
src/asset/: AssetManager.cpp
src/game/: Bird.cpp  Collision.cpp  Flash.cpp  Game.cpp  HUD.cpp  Land.cpp  Pipe.cpp  pipes.cpp
src/screens/: GameOverState.cpp  GameState.cpp  MainMenuState.cpp  gameover.cpp  gamescreen.cpp
src/state/: StateMachine.cpp
src/utils/: save_score.cpp  stdusages.cpp
